fix github link

--- a/src/index.html
+++ b/src/index.html
@@ -246,7 +246,7 @@
           <div class="row">
             <div class="col copyright text-center my-auto">
               <span>
-                <a href="https://github.com/yourusername" class="text-dark">
+                <a href="https://github.com/kashiashvili/TodoistAnalyticsDashboard" class="text-dark" target="_blank">
                   <i class="fab fa-github fa-4x"></i>
                 </a>
               </span>
