--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Todoist Analytics Dashboard</title>
   <meta name="description"
     content="Todoist task completion analytics, Todoist productivity dashboard, Todoist KPI dashboard, Todoist data insights">
+  <link rel="icon" href="favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
